Project/p4/tests/t051.err
Semantic error on line 1: Invalid left operand for operator '&&'.
