Project/p4/tests/t051.gpl
int i = "0" && 1;
